--- a/Dataproject/Dataproject.vcxproj.filters
+++ b/Dataproject/Dataproject.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="MaxHeap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="binaryTree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MaxHeap.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="MinHeap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BinaryTree.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
